Стилизует фильтр формы особенности

--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
                 </label>
               </div>
             </fieldset>
-            <fieldset class="filter__fieldset">
+            <fieldset class="filter__fieldset filter__fieldset_margin">
               <legend class="filter__legend filter__legend_margin">Сетка:</legend>
               <ul class="filter__list">
                 <li class="filter__item">
@@ -81,27 +81,27 @@
               </ul>
             </fieldset>
             <fieldset class="filter__fieldset">
-              <legend class="filter__legend">Особенности:</legend>
+              <legend class="filter__legend filter__legend_margin">Особенности:</legend>
               <ul class="filter__list">
                 <li class="filter__item">
-                  <input class="visually-hidden filter__input" id="slider" type="checkbox" name="slider">
-                  <label class="filter__label" for="slider">Слайдер</label>
+                  <input class="visually-hidden filter__input filter__input-checkbox" id="slider" type="checkbox" name="slider" checked>
+                  <label class="filter__label filter__label-checkbox" for="slider">Слайдер</label>
                 </li>
                 <li class="filter__item">
-                  <input class="visually-hidden filter__input" id="advantage-block" type="checkbox" name="advantage-block">
-                  <label class="filter__label" for="advantage-block">Блок преимуществ</label>
+                  <input class="visually-hidden filter__input filter__input-checkbox" id="advantage-block" type="checkbox" name="advantage-block">
+                  <label class="filter__label filter__label-checkbox" for="advantage-block">Блок преимуществ</label>
                 </li>
                 <li class="filter__item">
-                  <input class="visually-hidden filter__input" id="news" type="checkbox" name="news">
-                  <label class="filter__label" for="news">Новости</label>
+                  <input class="visually-hidden filter__input filter__input-checkbox" id="news" type="checkbox" name="news" checked>
+                  <label class="filter__label filter__label-checkbox" for="news">Новости</label>
                 </li>
                 <li class="filter__item">
-                  <input class="visually-hidden filter__input" id="gallery" type="checkbox" name="gallery">
-                  <label class="filter__label" for="gallery">Галерея</label>
+                  <input class="visually-hidden filter__input filter__input-checkbox" id="gallery" type="checkbox" name="gallery">
+                  <label class="filter__label filter__label-checkbox" for="gallery">Галерея</label>
                 </li>
                 <li class="filter__item">
-                  <input class="visually-hidden filter__input" id="basket" type="checkbox" name="basket">
-                  <label class="filter__label" for="basket">Корзина</label>
+                  <input class="visually-hidden filter__input filter__input-checkbox" id="basket" type="checkbox" name="basket">
+                  <label class="filter__label filter__label-checkbox" for="basket">Корзина</label>
                 </li>
               </ul>
             </fieldset>
