Стилизует секцию с пагинацией

--- a/catalog.html
+++ b/catalog.html
@@ -236,7 +236,7 @@
                 <a class="pagination__link" href="#">3</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#">Следующая</a>
+                <a class="pagination__link pagination__link_next" href="#">Следующая</a>
               </li>
             </ul>
           </section>
