Добавляет стилизацию активного состояния пункта меню

--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
             <li class="menu__item">
               <a class="menu__link" href="#">Клиенты</a>
             </li>
-            <li class="menu__item">
+            <li class="menu__item menu__item_active">
               <a class="menu__link" href="catalog.html">Магазин</a>
             </li>
             <li class="menu__item">
