Добавляет декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,12 @@
               <a class="menu__link" href="#">Контакты</a>
             </li>
           </ul>
-          <a class="basket-link" href="#">Корзина</a>
+          <a class="basket-link" href="#">
+            <svg class="basket-link__icon" width="15" height="20">
+              <use xlink:href="img/sprite.svg#cart-icon"></use>
+            </svg>
+            Корзина
+          </a>
         </nav>
       </div>
     </header>
