Добавляет полифил для использования use в IE 11

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
               <a class="menu__link" href="#">Контакты</a>
             </li>
           </ul>
-          <a class="basket-link" href="#">Корзина</a>
+          <a class="basket-link" href="#">
+            <svg class="basket-link__icon" width="15" height="20">
+              <use xlink:href="img/sprite.svg#cart-icon"></use>
+            </svg>
+            Корзина
+          </a>
         </nav>
       </div>
     </header>
@@ -217,5 +222,6 @@
         </svg>
       </button>
     </section>
+    <script src="js/svgxuse.min.js" defer></script>
   </body>
 </html>
