Добавляет анимированное открытие модального окна

--- a/catalog.html
+++ b/catalog.html
@@ -294,7 +294,7 @@
       </div>
     </footer>
     <section class="feedback">
-      <h2 class="footer__text">Напишите нам</h2>
+      <h2 class="feedback__text">Напишите нам</h2>
       <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
         <p class="feedback__row">
           <label class="feedback__label">Ваше имя:
@@ -316,6 +316,7 @@
       </button>
     </section>
     <script src="js/svgxuse.min.js" defer></script>
+    <script src="js/modal.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
     <script src="js/map.js"></script>
   </body>
