--- a/catalog.html
+++ b/catalog.html
@@ -252,7 +252,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <img class="map__img" src="img/index/map.jpg" width="1340" height="416" alt="Месторасположение дизайн-студии Nerds.">
         <div class="map__wrapper">
           <div class="map__contacts">
             <h3 class="map__title">Nerds design studio</h3>
@@ -298,10 +298,10 @@
       <form class="feedback__form" action="https://echo.htmlacademy.ru" method="POST">
         <p class="feedback__row">
           <label class="feedback__label">Ваше имя:
-            <input class="feedback__input" type="text" name="user-name" placeholder="Имя Фамилия">
+            <input class="feedback__input" type="text" name="user-name" placeholder="Имя Фамилия" required>
           </label>
           <label class="feedback__label">Ваше e-mail:
-            <input class="feedback__input" type="email" name="user-name" placeholder="email@example.com">
+            <input class="feedback__input" type="email" name="user-name" placeholder="email@example.com" required>
           </label>
         </p>
         <label class="feedback__label">Текст письма:
