--- a/index.html
+++ b/index.html
@@ -45,22 +45,27 @@
         <div class="promo__wrapper">
           <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
           <ul class="promo__list">
-            <li class="promo__item promo__item_first-slide">
+            <li class="promo__item promo__item--first">
               <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
               <p class="promo__description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
+              <a class="button button--promo-link" href="#">Узнать больше</a>
             </li>
-            <li class="promo__item promo__item_second-slide">
+            <li class="promo__item promo__item--second">
               <p class="promo__slogan">Любим математику как никто другой</p>
               <p class="promo__description">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
+              <a class="button button--promo-link" href="#">Узнать больше</a>
             </li>
-            <li class="promo__item promo__item_third-slide">
+            <li class="promo__item promo__item--third">
               <p class="promo__slogan">Только ночь, только хардкор</p>
               <p class="promo__description">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-              <a class="button button_promo-link" href="#">Узнать больше</a>
+              <a class="button button--promo-link" href="#">Узнать больше</a>
             </li>
           </ul>
+          <p class="controls">
+            <button class="control control--first" type="button"></button>
+            <button class="control control--second" type="button"></button>
+            <button class="control control--third" type="button"></button>
+          </p>
         </div>
       </section>
       <div class="main__wrapper">
@@ -70,17 +75,17 @@
             <li class="services__item services__item-sites">
               <h3 class="services__title">Веб-сайты</h3>
               <p class="services__description">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="button button_sites" href="#">Заказать</a>
+              <a class="button button--sites" href="#">Заказать</a>
             </li>
             <li class="services__item services__item-apps">
               <h3 class="services__title">Приложения</h3>
               <p class="services__description">Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a class="button button_apps" href="#">Заказать</a>
+              <a class="button button--apps" href="#">Заказать</a>
             </li>
             <li class="services__item services__item-presentations">
               <h3 class="services__title">Презентации</h3>
               <p class="services__description">Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="button button_presentation" href="#">Заказать</a>
+              <a class="button button--presentation" href="#">Заказать</a>
             </li>
           </ul>
         </section>
@@ -105,7 +110,7 @@
             </ul>
           </div>
           <div class="about__right">
-            <p class="about__description about__description_align">с 2004 года Любим точность во всем:</p>
+            <p class="about__description about__description--align">с 2004 года Любим точность во всем:</p>
             <table class="table">
               <tr class="table__row">
                 <th class="table__cell">146<sup class="table__percent">%</sup></th>
@@ -113,9 +118,9 @@
                 <th class="table__cell">50<sup class="table__percent">%</sup></th>
               </tr>
               <tr class="table__row">
-                <td class="table__cell table__cell_regular">Уровень самоотдачи</td>
-                <td class="table__cell table__cell_regular">Соблюдение сроков</td>
-                <td class="table__cell table__cell_regular">Минимальная предоплата</td>
+                <td class="table__cell table__cell--regular">Уровень самоотдачи</td>
+                <td class="table__cell table__cell--regular">Соблюдение сроков</td>
+                <td class="table__cell table__cell--regular">Минимальная предоплата</td>
               </tr>
             </table>
           </div>
@@ -196,7 +201,7 @@
         </ul>
         <div class="footer__info">
           <p class="footer__title">Давайте дружить, это выгодно!</p>
-          <p class="footer_description">Скидка 10% для друзей из социальных сетей.</p>
+          <p class="footer__description">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </div>
     </footer>
