--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="promo__wrapper">
           <h2 class="visually-hidden">Слайдер с описанием принципов работы дизайн-студии Nerds</h2>
           <ul class="promo__list">
-            <li class="promo__item promo__item--first">
+            <li class="promo__item promo__item--first promo__item--active">
               <p class="promo__slogan">Долго, дорого, скрупулезно.</p>
               <p class="promo__description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button button--promo-link" href="#">Узнать больше</a>
@@ -231,5 +231,6 @@
     <script src="js/modal.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
     <script src="js/map.js"></script>
+    <script src="js/slider.js"></script>
   </body>
 </html>
