--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </li>
           </ul>
           <p class="controls">
-            <button class="control control--first" type="button"></button>
+            <button class="control control--first control--active" type="button"></button>
             <button class="control control--second" type="button"></button>
             <button class="control control--third" type="button"></button>
           </p>
@@ -164,7 +164,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="img/index/map.jpg" width="1340" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Месторасположение дизайн-студии Nerds.">
         <div class="map__wrapper">
           <div class="map__contacts">
             <h3 class="map__title">Nerds design studio</h3>
