Добавляет слайдер в секции promo

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             </li>
           </ul>
           <p class="controls">
-            <button class="control control--first control--active" type="button"></button>
-            <button class="control control--second" type="button"></button>
-            <button class="control control--third" type="button"></button>
+            <button class="control control--active" type="button"></button>
+            <button class="control" type="button"></button>
+            <button class="control" type="button"></button>
           </p>
         </div>
       </section>
