--- a/catalog.html
+++ b/catalog.html
@@ -309,8 +309,8 @@
         </label>
         <button class="button feedback__button" type="submit">Отправить</button>
       </form>
-      <button class="feedback__close" type="button">
-        <svg class="feedback__close-icon" width="21" height="21" aria-label="Кнопка закрытия модального окна">
+      <button class="feedback__close" type="button" aria-label="Кнопка закрытия модального окна">
+        <svg class="feedback__close-icon" width="21" height="21">
           <use xlink:href="img/sprite.svg#close-cross"></use>
         </svg>
       </button>
