--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Сайт дизайн-студии Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -62,9 +62,9 @@
             </li>
           </ul>
           <p class="controls">
-            <button class="control control--active" type="button"></button>
-            <button class="control" type="button"></button>
-            <button class="control" type="button"></button>
+            <button class="control control--active" type="button" aria-label="Переключатель слайда"></button>
+            <button class="control" type="button" aria-label="Переключатель слайда"></button>
+            <button class="control" type="button" aria-label="Переключатель слайда"></button>
           </p>
         </div>
       </section>
@@ -164,7 +164,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Месторасположение дизайн-студии Nerds.">
+        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <div class="map__wrapper">
           <div class="map__contacts">
             <h3 class="map__title">Nerds design studio</h3>
@@ -221,8 +221,8 @@
         </label>
         <button class="button feedback__button" type="submit">Отправить</button>
       </form>
-      <button class="feedback__close" type="button">
-        <svg class="feedback__close-icon" width="21" height="21" aria-label="Кнопка закрытия модального окна">
+      <button class="feedback__close" type="button" aria-label="Кнопка закрытия модального окна">
+        <svg class="feedback__close-icon" width="21" height="21">
           <use xlink:href="img/sprite.svg#close-cross"></use>
         </svg>
       </button>
