Корректирует разметку и стилевой файл в соответствии с Lighthouse

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Design studio from Saint-Petersburg">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт дизайн-студии Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -164,7 +165,7 @@
       <article class="map">
         <h2 class="visually-hidden">Карта проезда в дизайн-студию Nerds</h2>
         <div class="map__interactive" id="map"></div>
-        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <img class="map__img" src="img/index/map.jpg" width="1440" height="416" alt="Адрес офиса г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <div class="map__wrapper">
           <div class="map__contacts">
             <h3 class="map__title">Nerds design studio</h3>
@@ -228,9 +229,7 @@
       </button>
     </section>
     <script src="js/svgxuse.min.js" defer></script>
-    <script src="js/modal.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
-    <script src="js/map.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
