--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Design studio from Saint-Petersburg">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Сайт дизайн-студии Nerds</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
@@ -316,8 +317,7 @@
       </button>
     </section>
     <script src="js/svgxuse.min.js" defer></script>
-    <script src="js/modal.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
-    <script src="js/map.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
