Подключает js файлы

--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
       </button>
     </section>
     <script src="js/svgxuse.min.js" defer></script>
+    <script src="js/modal.js"></script>
+    <script src="js/slider.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGHt_OEYXdVRzpyPXC5ZI8oSGGdTtclso&callback=initMap" async defer></script>
-    <script src="js/script.min.js"></script>
+    <script src="js/map.js"></script>
   </body>
 </html>
